Added images file and logo

--- a/Amazon Clone/Amazon.css
+++ b/Amazon Clone/Amazon.css
@@ -19,7 +19,7 @@
 }
 
 .Icon {
-    background-image: url(amazon_logo.png);
+    background-image: url(/Ingale.Repo/images/amazon_logo.png);
     height: 50px;
     width: 100%;
     background-size: cover;
