--- a/Amazon Clone/Amazon.css
+++ b/Amazon Clone/Amazon.css
@@ -103,7 +103,7 @@
 }
 
 .India-logo {
-    background-image: url(India.png);
+    background-image: url(/Ingale.Repo/images/India.png);
     height: 20px;
     width: 28px;
     background-size: cover;
